# task

./: readme.txt
calculator_c/: CMakeLists.txt  README.md
calculator_c/examples/: main.c
calculator_c/include/: ast.h  calculator.h  evaluator.h  lexer.h  parser.h
calculator_c/src/: ast.c  calculator.c  evaluator.c  lexer.c  parser.c
calculator_c/tests/: test_calculator.c
sort_bigdatafile/: gen_bigdatafile.py  makefile  readme.txt  sort_bigdatafile.cpp
